@@ -6,6 +6,7 @@ New features:
 - LDAPBackingDirectory is now Cache-aware, and can be used with
   a RAM Cache Manager. Caching is done at the lowest LDAP level, so
   doesn't depend on user or rights.
+- SQLDirectory is now Cache-aware too.
 - RAM Cache Managers can be added directly in portal_directories. Typical
   configuration should remove the AUTHENTICATED_USER from the keywords.
 - hasEntry now checks security, _hasEntry is the unrestricted method.
@@ -14,6 +15,8 @@ Bug fixes:
 - i18n fix on role labels translations (Member & Manager)
 - Taking advantage of the new centralized CPSI18n.tests.translations module.
 - Fixed translation files through the CPSI18n/bin/fix_pos script.
+- SQLDirectory searchEntries failed to return correct results when no
+  return_fields were specified.
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
--
+- Unit tests for SQLDirectory.
